addAmount works!!!